rust/crates/astra-cli/src/tui/history_cell/snapshots/astra__tui__history_cell__approval__tests__approval_card_100.snap
---
source: crates/astra-cli/src/tui/history_cell/approval.rs
assertion_line: 987
expression: "render_at(&fixture_full(), 100)"
---
╭─ ⏸ npm test --filter auth
│ ⚑ BashExecute
│ npm test --filter auth -- --verbose
│ ⚠ This command needs your approval before it runs.
│ Always allow this command pattern in workspace: similar `npm test` commands in this workspace
│
│  Allow once   Always allow this command pattern in workspace   Reject
╰─ ↑↓←→ select · Enter confirm · Esc reject · Ctrl+Enter quick accept
