rust/crates/astra-cli/src/tui/history_cell/snapshots/astra__tui__history_cell__approval__tests__approval_card_80.snap
---
source: crates/astra-cli/src/tui/history_cell/approval.rs
expression: "render_at(&fixture_full(), 80)"
---
╭─ ⏸ npm test --filter auth 
│ ⚑ BashExecute
│ npm test --filter auth -- --verbose
│ ⚠ execute (Prompt mode, no allow rule matches)
│ Will save: Bash(npm test:*)
│ 
│  Accept   Reject   Always   Skip 
╰─ ↑↓←→ select · Enter confirm · Esc reject · Ctrl+Enter quick accept
