rust/crates/astra-cli/src/tui/history_cell/snapshots/astra__tui__history_cell__approval__tests__approval_card_destructive_80.snap
---
source: crates/astra-cli/src/tui/history_cell/approval.rs
assertion_line: 909
expression: "render_at(&cell, 80)"
---
╭─ ⏸ edit /etc/hosts
│ ⚑ WritesOutsideWorkspace  ⚑ WritesSensitiveFile
│ /etc/hosts
│ ⚠ writes outside workspace
│ Always: session-only (outside workspace)
│
│  Accept   Reject   Turn   Session   Project×   User×   Skip
╰─ ↑↓←→ select · Enter confirm · Esc reject · Ctrl+Enter quick accept
